# library-platform

./: .env.example  .gitignore  EXACT_FILES_TO_CREATE.md  FIRST_MILESTONE.md  GITHUB_SETUP.md  IMPLEMENTATION_ROADMAP.md  LIVE_DEPLOYMENT_SETUP.md  NGINX_INTEGRATION.md  PRE_RELEASE_CHECKLIST.md  PROJECT_STATUS.md  QUICK_START.sh  README.md  RISKS_AND_MITIGATION.md  SETUP_SCRIPTS_GUIDE.md  SETUP_SUMMARY.md  URDU_APP_INTRODUCTION.md  docker-compose.yml  setup-live.sh
backend/: .env.example  Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  managers.py  models.py  serializers.py  views.py
backend/apps/ai_providers/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/analytics/: models.py  services.py  urls.py  views.py
backend/apps/common/: admin.py  api.py  audit.py  middleware.py  models.py  permissions.py
backend/apps/ingestion/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/institutes/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/knowledge/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/apps/learning/: __init__.py  apps.py  models.py
backend/apps/qa_engine/: __init__.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/scholars/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  celery.py  urls.py
backend/tests/: __init__.py  conftest.py  test_runtime_flows.py
docs/: API.md  (+5 more)
(+90 files in other folders)
