[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-platform"
version = "0.1.0"
description = "Scholarly AI learning platform for Arabic and Islamic books"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "mypy",
]
prod = [
    "gunicorn",
    "psycopg2-binary",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = "--cov=apps --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["migrations", "venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
